[tool.poetry]
name = "newton"
version = "0.1.0"
description = "A package to solve non-linear equations"
authors = ["Felipe M. S. Monteiro <fmarkson@outlook.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://github.com/felipemarkson/newton"
repository = "https://github.com/felipemarkson/newton"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Science/Research",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
pytest = "^5.4.3"
notebook = "^6.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
